<resources>
    <string name="app_name">Prototype</string>
    <string name="create_an_account">CREATE AN ACCOUNT?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">LOGIN</string>
    <string name="mekart">MeKart</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="l0gin">Login</string>
</resources>